--- a/skilltube_backend/main/static/css/video.css
+++ b/skilltube_backend/main/static/css/video.css
@@ -1,87 +1,133 @@
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
 .video-container .video-player video {
-  width:50%;
+  width:950px;
   height: 550px;
-  margin-left: 10px;
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  margin-left: 55px;
 }
 
 .caption-date {
-  margin-left: 15px;
+  margin-left: 12px;
   color: darkgreen;
+  justify-content: center;
 }
 
-  .search-section .input-group-mb-3 .form-Control {
-    display: flex;
-    position: relative;
-    width: 35%;
-    left: 330px;
-    top: 10px;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: var(--bs-body-color);
-    background-color: var(--bs-body-bg);
-    background-clip: padding-box;
-    border: var(--bs-border-width) solid var(--bs-border-color);
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: var(--bs-border-radius);
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-  }
-  
-  [type=submit]:not(:disabled), button:not(:disabled) {
-    cursor: pointer;
-    display: flex;
-    position: relative;
-    left: 990px;
-    top: -28px;
-  }
+body {
+  color:#008f26;
+  font-family: 'Share Tech Mono', monospace;
+}
 
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.image-container {
+  margin-right: 10px;
+  margin-left: 10px;
+  position: relative;
+  width: 380px;
+  margin-bottom: 60px;
+  height: 200px;
+  float: left;
+  margin-left: 33px;
+}
+
+.image-container a img {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  object-fit: cover;
+  flex-wrap: nowrap;
+  cursor: pointer;
+  display: flex;
+}
 
 .log-buttons {
-    display: flex;
-    float: right;
-    align-items: center;
-    margin: 10px;
-  }
+  display: flex;
+  align-items: center;
+}
+
+.btn-search {
+  cursor: pointer;
+  display: flex;
+  position: relative;
+  top: -28px;
+}
+
+.log-buttons .btn-secondary {
+  display: flex;
+  background-color: rgba(255, 0, 0, 0.726);
+}
+
+.log-buttons .btn-secondary:hover {
+  display: flex;
+  background-color: rgba(255, 0, 132, 0.726);
+}
+
+.log-buttons .btn-primary {
+  display: flex;
+  background-color: rgb(50, 53, 204);
+  margin-right: 10px;
+}
+
+.log-buttons .btn-primary:hover {
+  display: flex;
+  background-color: rgba(0, 98, 255, 0.726);
+}
+
+.log-buttons .btn-fourth {
+  display: flex;
+  background-color: #008f26;
+  color: white;
+}
+
+.log-buttons .btn-fourth:hover {
+  background-color: #379c37;
+}
+
+.home-btn .btn-third {
+  display: flex;
+  float: left;
+  color: #008f26;
+  border-color: #008f26;
+  top: -50px;
+  margin: 10px;
+}
+
+.search-section {
+  margin-top: 10px;
+}
+
+.search-section .input-group-mb-3 .form-Control {
   
-  .log-buttons .btn-secondary {
-    display: flex;
-    background-color: rgba(255, 0, 0, 0.726);
-  }
-  
-  .log-buttons .btn-secondary:hover {
-    display: flex;
-    background-color: rgba(255, 0, 132, 0.726);
-  }
-  
-  .log-buttons .btn-primary {
-    display: flex;
-    background-color: rgb(50, 53, 204);
-    margin-right: 10px;
-  }
-  
-  .log-buttons .btn-primary:hover {
-    display: flex;
-    background-color: rgba(0, 98, 255, 0.726);
-  }
-  
-  .log-buttons .btn-fourth {
-    display: flex;
-    background-color: #008f26;
-    margin-right: 30px;
-    color: white;
-  }
-  
-  .log-buttons .btn-fourth:hover {
-    background-color: #628f00;
-  }
-  
-  .home-btn .btn-third {
-    display: flex;
-    float: left;
-    color: #008f26;
-    top: -50px;
-    margin: 10px;
-  }
+  display: flex;
+  position: relative;
+  width: 100%;
+  top: 10px;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: var(--bs-body-color);
+  background-color: var(--bs-body-bg);
+  background-clip: padding-box;
+  border: var(--bs-border-width) solid var(--bs-border-color);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: var(--bs-border-radius);
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
