--- a/skilltube_backend/main/templates/video.html
+++ b/skilltube_backend/main/templates/video.html
@@ -11,45 +11,73 @@
 </head>
 
 <body>
-  <div class="log-buttons">
-    <a class = "btn btn-fourth" href="/video_upload">Upload</a>
-    <a class="btn btn-primary" href="/registration/">Cygne Up</a>
-    <a class="btn btn-secondary" href="/login">Log In</a>
-  </div>
-  <div class="home-btn">
-    <a class="btn btn-third" href="/">Skilltube</a>
-  </div>
 
-  {% if request.GET.success_message %}
-  <div class="alert alert-success">
-    {{ request.GET.success_message }}
-  </div>
-  {% endif %}
-
-  <div class="search-section">
-    <form action="/search" method="GET">
-      <div class="input-group-mb-3">
-        <input type="text" class="form-Control" placeholder="Search" name="caption">
-        <button class="btn btn-primary" type="submit">Search</button>
+  <header>
+    <div class="row">
+      <div class="home-btn col-4">
+        <a class="btn btn-third" href="/">Skilltube</a>
       </div>
-    </form>
-  </div>
-    <div class="video-container">
-    <div class="video-player">
-      <video controls>
-        <source src="/media/{{ video.video }}" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
+      <div class="col-4 ">
+        {% if request.GET.success_message %}
+        <div class="alert ">
+          {{ request.GET.success_message }}
+        </div>{% endif %}
+
+        <div class="search-section">
+          <form action="/search" method="GET" class="d-flex" role="search">
+            <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+      <div class="log-buttons col-4 justify-content-between">
+        <div>
+          <a class="btn btn-fourth" href="/video_upload">Upload</a>
+        </div>
+        <div class="d-flex ml-auto">
+          <a class="btn btn-primary" href="/registration/">Sign Up</a>
+          <a class="btn btn-secondary" href="/login">Log In</a>
+        </div>
+      </div>
     </div>
-    <div class="caption-date">
-      <h2 class="caption">{{ video.caption }}</h2>
-      <h3 class="uploaded-date">{{ video.created_at }}</h3>
+  </header>
+
+  <main>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1>Watch videos !!!</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="video-container">
+          <div class="video-player">
+            <video controls>
+              <source src="/media/{{ video.video }}" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <div class="caption-date">
+            <h2 class="caption">{{ video.caption }}</h2>
+            <h3 class="uploaded-date">{{ video.created_at }}</h3>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+  </main>
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
+
+  <footer class="footer">
+    <div>
+      <p>Simon&Ethan@2023</p>
+    </div>
+  </footer>
+
 </body>
+
 </html>
