--- a/skilltube_backend/main/static/css/registration.css
+++ b/skilltube_backend/main/static/css/registration.css
@@ -56,9 +56,20 @@ input[type="email"] {
 }
 
 .home-btn .btn-third {
+  margin-left: auto;
+  width: 110px;
+  height: 36px;
+  --bs-btn-padding-x: 0.75rem;
+  --bs-btn-padding-y: 0.375rem;
+  justify-content: center;
+  align-items: center;
   display: flex;
   color: #008f26;
-  border-color: #008f26;
+  border: 1px solid #008f26;
+  border-radius: 0.375rem;
   top: -50px;
+  margin: 10px;
+  text-decoration: none;
+  vertical-align: middle;
   margin: 10px;
 }
