--- a/skilltube_backend/main/templates/login.html
+++ b/skilltube_backend/main/templates/login.html
@@ -5,6 +5,13 @@
     <link rel="stylesheet" type="text/css" href="/static/css/login.css">
 </head>
 <body>
+    <header>
+        <div class="row">
+            <div class="home-btn col-4">
+              <a class="btn btn-third" href="/">Skilltube</a>
+            </div>
+        </div>
+    </header>
     <h2>Login Form</h2>
 
 
