--- a/skilltube_backend/main/templates/video.html
+++ b/skilltube_backend/main/templates/video.html
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1>Watch videos !!!</h1>
+          <h2 class="category">Level: {{video.category}}</h2>
         </div>
       </div>
       <div class="row">
