--- a/skilltube_backend/main/templates/my_videos.html
+++ b/skilltube_backend/main/templates/my_videos.html
@@ -12,51 +12,48 @@
 
 <body>
 
-  <header>
-    <div class="row">
-      <div class="home-btn col-4">
-        <a class="btn btn-third" href="/">Skilltube</a>
-      </div>
-      <div class="col-4 ">
-        <div class="search-section">
-          <form action="/search" method="GET" class="d-flex" role="search">
-            <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
-            <input class="form-control me-2" type="text" placeholder="Search by level" aria-label="Search" name="category">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+    <header>
+        <div class="row">
+          <div class="home-btn col-4">
+            <a class="btn btn-third" href="/">Skilltube</a>
+          </div>
+          <div class="col-4 ">
+            <div class="search-section">
+              <form action="/search" method="GET" class="d-flex" role="search">
+                <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="caption">
+                <input class="form-control me-2" type="text" placeholder="Search by level" aria-label="Search" name="category">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+          {% if user.is_authenticated %}
+          <div class="log-buttons col-4 justify-content-end">
+            <a class="btn btn-fourth" href="/video_upload">Upload</a>
+            <div>
+              <form action="{% url 'logout' %}" method="POST">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger">Log Out</button>
+              </form>
+            </div>
+          </div>
+          {% else %}
+          <div class="log-buttons col-4 justify-content-between">
+            <div>
+                <a class="btn btn-fourth" href="/login">Upload</a>
+            </div>
+            <div class="d-flex ml-auto">
+              <a class="btn btn-primary" href="/registration/">Sign Up</a>
+              <a class="btn btn-secondary" href="/login">Log In</a>
+            </div>
+          </div>
+          {% endif %}
         </div>
-      </div>
-      {% if user.is_authenticated %}
-      <div class="log-buttons col-4 justify-content-end">
-        <a class="btn btn-fourth" href="/video_upload">Upload</a>
-        <div>
-          <form action="{% url 'logout' %}" method="POST">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-danger">Log Out</button>
-          </form>
-        </div>
-      </div>
-      {% else %}
-      <div class="log-buttons col-4 justify-content-between">
-        <div>
-            <a class="btn btn-fourth" href="/login">Upload</a>
-        </div>
-        <div class="d-flex ml-auto">
-          <a class="btn btn-primary" href="/registration/">Sign Up</a>
-          <a class="btn btn-secondary" href="/login">Log In</a>
-        </div>
-      </div>
-      {% endif %}
-    </div>
-  </header>
+      </header>
 
 
   <main>
     <div class="row m-lg-4">
       <div class="col-2">
-        {% if user.is_authenticated %}
-            <a class="btn btn-five" href="/my_videos/{{ request.user.username }}">My Videos</a>
-        {% endif %}
       </div>
       <div class="col-9">
         <div class="row">
@@ -70,7 +67,7 @@
         </div>
         <div class="row">
           <div>
-            {% for x in video %}
+            {% for x in my_videos %}
             <div class="image-container">
               <a href="/video/{{ x.video_id }}">
                 <img src="{{x.thumbnail.url}}">
