--- a/skilltube_backend/main/static/css/style.css
+++ b/skilltube_backend/main/static/css/style.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
+  position: relative;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -22,6 +22,7 @@ body {
   position: relative;
   width: 380px;
   margin-bottom: 75px;
+  margin-top: 15px;
   height: 200px;
   float: left;
   margin-left: 33px;
@@ -164,4 +165,13 @@ body {
   left: 0;
   width: 50%;
   height: 50%;
+}
+
+.user-videos-name {
+  text-decoration: none;
+  color: #008f26;
+}
+
+.user-videos-name:hover {
+  color: darkgreen;
 }
