--- a/skilltube_backend/main/templates/index.html
+++ b/skilltube_backend/main/templates/index.html
@@ -76,7 +76,7 @@
                 <img src="{{x.thumbnail.url}}">
               </a>
               <h3 class="caption">{{x.caption }}</h3>
-              <p>{{ x.created_at }} <br>Level: {{ x.category }} <br>Uploaded by: <a href="/uploader/{{ x.user.username }}">{{ x.user.username }}</p>
+              <p>{{ x.created_at }} <br>Level: {{ x.category }} <br>Uploaded by: <a class="user-videos-name" href="/uploader/{{ x.user.username }}">{{ x.user.username }}</a></p>
             </div>
             {% endfor %}
           </div>
@@ -86,11 +86,6 @@
   </main>
 
 
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-
   <footer class="footer">
     <div>
       <row>
@@ -98,6 +93,11 @@
     </row>
     </div>
   </footer>
+    
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+  crossorigin="anonymous"></script>
 
 </body>
 
