--- a/skilltube_backend/main/templates/uploader.html
+++ b/skilltube_backend/main/templates/uploader.html
@@ -58,7 +58,7 @@
       <div class="col-9">
         <div class="row">
           <div class="col-9">
-            <h2>Videos uploaded by {{ user.username }}</h2>
+            <h2>Videos uploaded by {{ username }}</h2>
           </div>
         </div>
         <div class="row">
