--- a/skilltube_backend/main/static/css/video.css
+++ b/skilltube_backend/main/static/css/video.css
@@ -28,7 +28,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
+  position: relative;
   bottom: 0;
   left: 0;
   width: 100%;
