--- a/skilltube_backend/main/templates/video.html
+++ b/skilltube_backend/main/templates/video.html
@@ -78,6 +78,23 @@
           </div>
         </div>
       </div>
+      <h2>Comment section</h2>
+      {% for comment in comments %}
+    <div class="comment">
+        <p>{{ comment.user.username }}</p>
+        <p>{{ comment.content }}</p>
+        <p>{{ comment.created_at }}</p>
+    </div>
+      {% empty %}
+    <p>No comments yet.</p>
+      {% endfor %}
+
+      <form method="POST" action="{% url 'video' video_id=video.video_id %}">
+        {% csrf_token %}
+        <textarea name="content" placeholder="Write your comment"></textarea>
+        <button type="submit">Add Comment</button>
+      </form>
+
     </div>
   </main>
 
